--- a/myplugins/tag/templates/tag/createTag.html
+++ b/myplugins/tag/templates/tag/createTag.html
@@ -4,11 +4,12 @@
 
 {% block content %}
 <h1>New Tag</h1>
-<form action="tag/create_tag" method="post">
+<form action="/create_tag/" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
-    <input type="text" value="name"/>
-    <input type="submit"/>
+    <!--<input type="text" value="name"/>-->
+    {{form}}
+    <button>Submit</button>
 </form>
-<a href="/tag">All Tags</a>
+<a href="/">All Tags</a>
 <!--<a href="/tag/delete_tag/{{tag.name}}">Remove this Tag</a>-->
 {% endblock %}
