--- a/myplugins/tag/templates/tag/oneTag.html
+++ b/myplugins/tag/templates/tag/oneTag.html
@@ -3,7 +3,7 @@
 {% block title %}{{tag}}{% endblock %}
 
 {% block content %}
-<h1>{{tag}}</h1>
-<a href="/tag">All Tags</a>
+<h1>{{tag.name}}</h1>
+<a href="/">All Tags</a>
 <!--<a href="/tag/delete_tag/{{tag.name}}">Remove this Tag</a>-->
 {% endblock %}
