updated tags so that they are not the default route.

--- a/myplugins/tag/templates/tag/deleteTag.html
+++ b/myplugins/tag/templates/tag/deleteTag.html
@@ -8,6 +8,6 @@
     {% csrf_token %}
     <p>Are you sure that you want to delete {{tag.name}}?</p>
     <input type="submit" value="Yes"/>
-    <a href="/one_tag/{{tag.name}}">Cancel</a>
+    <a href="/tag/one_tag/{{tag.name}}">Cancel</a>
 </form>
 {% endblock %}
