--- a/myplugins/tag/templates/tag/oneTag.html
+++ b/myplugins/tag/templates/tag/oneTag.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <h1>{{tag.name}}</h1>
-<a href="/">All Tags</a>
-<a href="/delete_tag/{{tag.name}}">Delete Tag</a>
+<a href="/tag/">All Tags</a>
+<a href="/tag/delete_tag/{{tag.name}}">Delete Tag</a>
 <!--<a href="/tag/delete_tag/{{tag.name}}">Remove this Tag</a>-->
 {% endblock %}
