Full CRUD on task app.

--- a/myplugins/crm/templates/crm/oneTask.html
+++ b/myplugins/crm/templates/crm/oneTask.html
@@ -7,6 +7,8 @@
     <h1>{{task.title}}</h1>
     <a href="/crm/task/all/">All Tasks</a>
     <a href="/crm">Dashboard</a>
+    <a href="/crm/task/update/{{task.id}}">Update</a>
+    <a href="/crm/task/delete/{{task.id}}">Delete</a>
 </div>
 <div>
     <p>Priority: {{task.priority}}</p>
