updated some things with crm form and models.

--- a/myplugins/crm/templates/crm/oneTask.html
+++ b/myplugins/crm/templates/crm/oneTask.html
@@ -12,6 +12,7 @@
 </div>
 <div>
     <p>Priority: {{task.priority}}</p>
+    <p>Recurring Task? {{task.is_recurring}}</p>
     <p>Details: {{task.body}}</p>
 </div>
 {% endblock %}
