--- a/myplugins/templates/base.html
+++ b/myplugins/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{# Could move this in the templates/admin folder to style the admin site #}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,9 +18,10 @@
     </style>
 </head>
 <body>
+    {% include 'includes/navbar.html' %}
     {% block content %}
     {% endblock %}
-    <footer><small>&copy; 2022 Robert Godlewski</small></footer>
+    {% include 'includes/footer.html' %}
     <!-- Bootstrap JavaScript-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script>
