--- a/myplugins/templates/base.html
+++ b/myplugins/templates/base.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    {% include 'includes/navbar.html' %}
+    {# {% include 'includes/navbar.html' %} #}
     {% block content %}
     {% endblock %}
     {% include 'includes/footer.html' %}
