--- a/myplugins/blog/templates/blog/onepost.html
+++ b/myplugins/blog/templates/blog/onepost.html
@@ -10,74 +10,74 @@
     <h3>{{post.subtitle}}</h3>
     <h6>
         {% if post.published and post.publish_date and post.updated_at != post.publish_date and not post.hide_details%}
-        <span>Updated: {{post.updated_at}}</span>
+            <span>Updated on: {{post.updated_at|date:"M d, Y"}}</span>
         {% elif post.published and post.publish_date and not post.hide_details%}
-        <span>Published on: {{post.publish_date}}</span>
+            <span>Published on: {{post.publish_date|date:"M d, Y"}}</span>
         {# Only temporary #}
         {% elif not post.hide_details %}
-        <span>Created: {{post.created_at}}</span>
+            <span>Created on: {{post.created_at|date:"M d, Y"}}</span>
         {% endif %}
-        <span> by {{post.author.user}}</span>
+        <span> by {{post.author.username}}</span>
         {% if post.featured and not post.hide_details %}
-        <span> - FEATURED</span>
+            <span> - FEATURED</span>
         {% endif %}
     </h6>
+    {% if post.author == user %}
+        <p>
+            <span>Actions: </span>
+            <a href="{% url 'editpost' post.slug %}">edit post</a>
+            <span> | </span>
+            <a href="{% url 'deletepost' post.slug %}">delete post</a>
+        </p>
+    {% endif %}
     <p>{{post.content | markdown | safe}}</p>
 </div>
 <div>
-    {% if not post.hide_details %}
-    <h5>
-        {# Fix this so that it will link to a user page with details #}
-        {% if post.author.website %}
-            <a href="{{post.author.website}}" alt="{{post.author.user}} website url">About the Author</a>
-        {% elif post.author.bio %}
-            <span>About the Author</span>
+    {% if not post.comments_disabled %}
+        <h5>Create a Comment</h5>
+        {# Add in the form here #}
+        <form method="POST">
+            {% csrf_token %}
+            <div class="col">
+                <label>{{form.name.label}}: </label>
+                {{form.name}}
+            </div>
+            <div class="col">
+                <label>{{form.email.label}}:</label>
+                {{form.email}}
+            </div>
+            <div class="col">
+                {{form.content}}
+            </div>
+            <button class="btn btn-primary" type="submit">Comment</button>
+        </form>
+        <h5>Comments</h5>
+        {# Need to add in the create comment form here instead of the button #}
+        {% if comments %}
+            {% for comment in comments %}
+                <div style="border: 1px black solid;">
+                    <div>
+                        <p>
+                            <a href="mailto:{{comment.email}}">{{comment.name}}</a>
+                            <span> said {{comment.updated_at|timesince}}:</span>
+                        </p>
+                        <p>{{comment.content}}</p>
+                    </div>
+                    {# Allow editing and deleting here #}
+                    {# {% if author == comment.author %} #}
+                        <!-- <div>
+                            <a href="{% url 'editcomment' post.slug comment.id %}">Edit</a>
+                            <span> | </span>
+                            <a href="{% url 'deletecomment' post.slug comment.id %}">Delete</a>
+                        </div> -->
+                    {# {% endif %} #}
+                </div>
+            {% endfor %}
+        {% else %}
+            <p>There are no comments right now.</p>
+            {# Remove the button below #}
+            <a href="{% url 'createcomment' post.slug %}" class="px-5 py-2 mx-4 btn btn-primary">Add comment</a>
         {% endif %}
-    </h5>
-    {% endif %}
-    <p>{{post.author.bio}}</p>
-    {% if post.author == author %}
-    <div>
-        <a href="{% url 'editpost' post.slug %}">edit post</a>
-        <span> | </span>
-        <a href="{% url 'deletepost' post.slug %}">delete post</a>
-    </div>
-    {% endif %}
-</div>
-<div>
-    {% if not post.comments_disabled %}
-    <h5>Comments</h5>
-    {% endif %}
-    {% if comments and not post.comments_disabled %}
-        {% for comment in comments %}
-        <div style="border: 1px black solid;">
-            <div>
-                <p>{{comment.author.user}}</p>
-                <p>
-                    {# There's some wierd backwards logic here #}
-                    {% if comment.created_at == comment.updated_at %}
-                    <span>{{comment.updated_at}} (Updated)</span>
-                    {% else %}
-                    <span>{{comment.created_at}}</span>
-                    {% endif %}
-                </p>
-            </div>
-            <div><p>{{comment.content}}</p></div>
-            {% if author == comment.author %}
-            <div>
-                <a href="{% url 'editcomment' post.slug comment.id %}">Edit</a>
-                <span> | </span>
-                <a href="{% url 'deletecomment' post.slug comment.id %}">Delete</a>
-            </div>
-            {% endif %}
-            {# Need to add in a button to reply to this thread #}
-        </div>
-        {% endfor %}
-    {% elif not post.comments_disabled %}
-    <p>There are no comments right now</p>
-    {% endif %}
-    {% if not post.comments_disabled %}
-    <a href="{% url 'createcomment' post.slug %}" class="px-5 py-2 mx-4 btn btn-primary">Add comment</a>
     {% endif %}
 </div>
 {% endblock %}
