--- a/myplugins/blog/templates/blog/index.html
+++ b/myplugins/blog/templates/blog/index.html
@@ -3,19 +3,32 @@
 {% block title %}Home{% endblock %}
 
 {% block content %}
-<div class="container row">
+<div class="container row text-center">
     <h1>Blogs</h1>
+    <h3>Categories</h3>
+    <div class="col">
+        {% if category_id %}
+            <a href="{% url 'blogs' %}" class="btn btn-secondary">All</a>
+        {% else %}
+            <a href="{% url 'blogs' %}" class="btn btn-primary">All</a>
+        {% endif %}
+        {% for category in categories %}
+            {% if category.id == category_id %}
+                <a href="{% url 'onecategory' category.id %}" class="btn btn-primary">{{category.title}}</a>
+            {% else %}
+                <a href="{% url 'onecategory' category.id %}" class="btn btn-secondary">{{category.title}}</a>
+            {% endif %}
+        {% endfor %}
+    </div>
     {% if user and drafts and user.is_staff %}
-        <h3>Posts working on</h3>
-        <p>
-            If there is no date and time shown it means you need to set a published date for these.
-        </p>
+        <h3>Posts {{user.username}} is working on</h3>
+        <p>You need to set a published date for these.</p>
         {% for draft in drafts %}
             <div class="border col-5 m-4 p-2">
                 <a href="{% url 'onepost' draft.slug %}"><h5>{{draft.title}}</h5></a>
-                <p>{{draft.updated_at|date:"M d, Y"}} ({{draft.updated_at|timesince}} ago) by {{draft.author.username}}</p>
+                <p>By {{draft.author.username}}</p>
                 <p><strong>{{draft.subtitle}}</strong></p>
-                <a href="{% url 'editpost' draft.slug %}">edit post</a>
+                <!-- <a href="{% url 'editpost' draft.slug %}">edit post</a> -->
             </div>
         {% endfor %}
     {% endif %}
@@ -27,7 +40,7 @@
                 <a href="{% url 'onepost' post.slug %}"><h5>{{post.title}}</h5></a>
                 <p>{{post.updated_at|date:"M d, Y"}} ({{post.updated_at|timesince}} ago) by {{post.author.username}}</p>
                 <p><strong>{{post.subtitle}}</strong></p>
-                <a href="{% url 'editpost' post.slug %}">edit post</a>
+                <!-- <a href="{% url 'editpost' post.slug %}">edit post</a> -->
             </div>
         {% endfor %}
     {% elif user and user.is_staff %}
@@ -44,7 +57,7 @@
                 <p>{{feat.updated_at|date:"M d, Y"}} ({{feat.updated_at|timesince}} ago) by {{feat.author.username}}</p>
                 <p><strong>{{feat.subtitle}}</strong></p>
                 {% if user.is_authenticated and feat.author == user %}
-                    <a href="{% url 'editpost' feat.slug %}">edit post</a>
+                    <!-- <a href="{% url 'editpost' feat.slug %}">edit post</a> -->
                 {% endif %}
             </div>
         {% endfor %}
@@ -57,10 +70,12 @@
             <p>On {{post.updated_at|date:"M d, Y"}} ({{post.updated_at|timesince}} ago) by {{post.author.username}}</p>
             <p><strong>{{post.subtitle}}</strong></p>
             {% if user.is_authenticated and post.author == user %}
-                <a href="{% url 'editpost' post.slug %}">edit post</a>
+                <!-- <a href="{% url 'editpost' post.slug %}">edit post</a> -->
             {% endif %}
         </div>
         {% endfor %}
+    {% else %}
+        <p>Currently have no posts.  Come back later.</p>
     {% endif %}
 </div>
 {% endblock %}
