--- a/myplugins/blog/templates/blog/onepost.html
+++ b/myplugins/blog/templates/blog/onepost.html
@@ -23,16 +23,17 @@
         {% endif %}
     </h6>
     {% if post.author == user %}
-        <p>
+        <!-- <p>
             <span>Actions: </span>
             <a href="{% url 'editpost' post.slug %}">edit post</a>
             <span> | </span>
             <a href="{% url 'deletepost' post.slug %}">delete post</a>
-        </p>
+        </p> -->
     {% endif %}
     <p>{{post.content | markdown | safe}}</p>
 </div>
 <div>
+    <a href="{% url 'blogs' %}" class="btn btn-secondary">Return to Blogs</a>
     {% if not post.comments_disabled %}
         <h5>Create a Comment</h5>
         {# Add in the form here #}
@@ -75,8 +76,6 @@
             {% endfor %}
         {% else %}
             <p>There are no comments right now.</p>
-            {# Remove the button below #}
-            <a href="{% url 'createcomment' post.slug %}" class="px-5 py-2 mx-4 btn btn-primary">Add comment</a>
         {% endif %}
     {% endif %}
 </div>
