--- a/myplugins/templates/base.html
+++ b/myplugins/templates/base.html
@@ -17,7 +17,7 @@
         }
     </style>
 </head>
-<body>
+<body class="container">
     {% include 'includes/navbar.html' %}
     {% block content %}
     {% endblock %}
