--- a/myplugins/templates/includes/navbar.html
+++ b/myplugins/templates/includes/navbar.html
@@ -1,13 +1,15 @@
 <!-- Navbar -->
-<header class="container row">
-    <nav class="col-12 m-3">
-        <a href="/" class="px-5 py-2 mx-4 btn btn-primary">Blogs</a>
-        {% if user.is_authenticated %}
-        <!-- <a href="{% url 'userinfo' user.username %}" class="px-5 py-2 mx-4 btn btn-primary">{{user.username}} info</a> -->
-        <a href="{% url 'logout' %}" class="px-5 py-2 mx-4 btn btn-primary">Logout</a>
-        {# {% else %} #}
-        <!-- <a href="{% url 'login' %}" class="px-5 py-2 mx-4 btn btn-primary">Login</a>
-        <a href="{% url 'register' %}" class="px-5 py-2 mx-4 btn btn-primary">Register</a> -->
-        {% endif %}
-    </nav>
+<header class="container row text-center">
+    {# <img src="{% static 'images/LogoName.jpg' %}" alt="Site Logo" class="m-6"/> #}
+    <img src="#" alt="Site Logo Here" class="col-5-lg"/>
+    <div class="btn-group col-6-lg">
+        <!-- <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
+            Menu
+        </button>
+        <nav class="dropdown-menu">
+            <a href="/" class="dropdown-item">Blogs</a>
+        </nav> -->
+        <!-- <a href="/" class="btn btn-primary">Blogs</a> -->
+        <!-- <a href="#" class="btn btn-primary">Test</a> -->
+    </div>
 </header>
