--- a/myplugins/templates/includes/navbar.html
+++ b/myplugins/templates/includes/navbar.html
@@ -1,8 +1,10 @@
 <!-- Navbar -->
 <header class="container row text-center">
-    {# <img src="{% static 'images/LogoName.jpg' %}" alt="Site Logo" class="m-6"/> #}
-    <img src="#" alt="Site Logo Here" class="col-5-lg"/>
-    <div class="btn-group col-6-lg">
+    <div>
+        <h3 class="col-lg-6 col-12">Django Plugin Testing Environment</h3>
+    </div>
+    {# Add in routes for other plugins later #}
+    <div class="btn-group col-lg-6">
         <!-- <button type="button" class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown" data-bs-display="static" aria-expanded="false">
             Menu
         </button>
