--- a/myplugins/templates/includes/footer.html
+++ b/myplugins/templates/includes/footer.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
 <footer class="container row m-2">
     <small>&copy; 2024 Robert Godlewski</small>
-    <small><a href="/admin">login admin</a></small>
+    <small><a href="/admin">admin site</a></small>
 </footer>
